--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "build": "babel src --out-dir dist",
     "lint": "eslint src test",
-    "test": "jest --verbose --watchAll",
-    "test:coverage": "jest --coverage"
+    "test": "jest --verbose --coverage",
+    "test:dev": "jest --verbose --watchAll"
   },
   "repository": {
     "type": "git",
