--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,6 @@
 version: 2.1
+orbs:
+    codecov: codecov/codecov@1.0.2
 jobs:
     build:
         docker:
@@ -37,6 +39,10 @@ jobs:
             - run: 
                 name: "Test"
                 command: npm test
+            - store_artifacts:
+                path: coverage     
+            - codecov/upload:
+                file: coverage/*.json  
 workflows:
     evalidate:
         jobs:
